minio-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: velero
# # ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: minio-pv
#   namespace: velero
#   labels:
#     type: glusterfs
#     app: minio
# spec:
#   storageClassName: managed-gluster
#   capacity:
#     storage: 5Gi
#   accessModes:
#     - ReadWriteOnce
#   glusterfs:
#     endpoints: glusterfs-cluster
#     path: k8s-volume/minio
#     readOnly: false

# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: minio-pvc
#   namespace: velero
#   labels:
#     app: minio
# spec:
#   storageClassName: managed-gluster
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 5Gi
#   volumeName: "minio-pv"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: velero
  labels:
    app: minio
spec:
  selector:
    matchLabels:
      app: minio
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: minio
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        command: ["/bin/bash"]
        # - /bin/bash
        # - -c
        args: ["-c", "minio server /data --console-address :9090"]
        # - minio server /data #--console-address :9000
        # - /storage
        ports:
        - name: readiness-port
          containerPort: 9090
          hostPort: 9090
        - name: api-port
          containerPort: 9000
        readinessProbe:
          periodSeconds: 30
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: readiness-port
            scheme: HTTP
        livenessProbe:
          periodSeconds: 30
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: readiness-port
            scheme: HTTP
        imagePullPolicy: Always
        volumeMounts:
            - mountPath: /data
              name: localvolume  
      nodeSelector:
        kubernetes.io/hostname: ip-10-100-8-148
      volumes:
        - name: localvolume
          hostPath:
            path: /appserver/data
            type: DirectoryOrCreate

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  labels:
    app: minio
  namespace: velero
spec:
  selector:
    app: minio
  type: NodePort
  ports:
  - protocol: TCP
    port: 9090
    nodePort: 31830

---
apiVersion: v1
kind: Service
metadata:
  name: minio-api-svc
  labels:
    app: minio
  namespace: velero
spec:
  selector:
    app: minio
  type: NodePort  
  ports:
  - protocol: TCP
    port: 9000
    nodePort: 30831

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: minio
  name: minio
  namespace: velero
  annotations:
    nginx.org/ssl-services: "minio-svc"
spec:
  ingressClassName: nginx
  rules:
  - host: minio.bank.dotin.ir
    http:
      paths:
      - backend:
          service:
            name: minio-svc
            port:
              number: 9090
        path: /
        pathType: Prefix
